<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/messageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/child_selector"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/messageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_layout_margin"
        android:layout_marginLeft="@dimen/base_layout_margin"
        android:layout_marginRight="@dimen/base_layout_margin"
        android:layout_marginTop="@dimen/base_layout_margin"
        android:text="@string/message_title"
        android:textColor="@color/base_text" />

    <ScrollView
        android:id="@+id/personScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sendButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/messageTitle"
        android:layout_marginBottom="@dimen/scroll_botton_margin"
        android:layout_marginLeft="@dimen/base_layout_margin"
        android:layout_marginRight="@dimen/base_layout_margin"
        android:fadeScrollbars="false" >

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/mesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/messageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:text="@string/message_invite"
                    android:textColor="@color/base_text" />

                <EditText
                    android:id="@+id/messageInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:maxLength="200"
                    android:paddingLeft="@dimen/base_layout_margin"
                    android:paddingRight="@dimen/base_layout_margin"
                    android:singleLine="true"
                    android:textColor="@color/base_text" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkTarget1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_to_user1" />

            <CheckBox
                android:id="@+id/checkTarget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_to_user2" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/centralGap"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/centralGap"
        android:text="@string/message_send" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/centralGap"
        android:text="@string/message_cancel" />

</RelativeLayout>